fixed three conatiner overlap on nav

--- a/src/Three.css
+++ b/src/Three.css
@@ -6,4 +6,5 @@
   height: 70vw;
   right: 7vw;
   top: -28vw;
+  z-index: -1;
 }
